--- a/Games/TestServer/public/whois/index.html
+++ b/Games/TestServer/public/whois/index.html
@@ -16,7 +16,7 @@
 				
 				<input id="Username" type="text">
 			</div>
-			<div id="numChooser" hidden>
+			<div id="numChooser" style="text-align: center ">
 				<select id="numQuestion" style="background-color:#ffffff">
 					<option value="1">1 question to play.</option>
 					<option value="5">5 questions to play.</option>
